# MPILearn

./: README.md
Ex1/: main.cpp  syncprint.cpp
Ex2/: integration.cpp  sendrecive1.cpp  sumup.cpp
Ex3/: vec2d.cpp  vector.cpp
Ex4/: CMakeLists.txt  main.cpp
